--- a/image-creation.ipynb
+++ b/image-creation.ipynb
@@ -28,10 +28,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## API call"
+    "## API calls\n",
+    "\n",
+    "Take a look at this article for some tips for different image generation options: \n",
+    "\n",
+    "- [Prompt Design for DALL·E: Photorealism — Emulating Reality](https://medium.com/merzazine/prompt-design-for-dall-e-photorealism-emulating-reality-6f478df6f186)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dancing students"
    ]
   },
   {
@@ -41,11 +53,91 @@
    "outputs": [],
    "source": [
     "response = openai.Image.create(\n",
-    "  prompt=\"a white siamese cat\",\n",
+    "  prompt=\"Dancing people in the evening, seen from back, sunset, in front of  skyline, digital art\",\n",
     "  n=1,\n",
-    "  size=\"256x256\"\n",
+    "  size=\"1024x1024\"\n",
     ")\n",
-    "image_url = response['data'][0]['url']"
+    "image_url_1 = response['data'][0]['url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_url_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The result:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/dancing-students.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cyborg in Stuttgart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = openai.Image.create(\n",
+    "  prompt=\"A photograph of a Cyborg exploring Stuttgart at night, Digital Art\",\n",
+    "  n=1,\n",
+    "  size=\"1024x1024\"\n",
+    ")\n",
+    "image_url_2 = response['data'][0]['url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_url_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Result:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cyborg in Stuttgart"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/cyborg-stuttgart.png)"
    ]
   }
  ],
@@ -65,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:27:35) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
