--- a/image-creation.ipynb
+++ b/image-creation.ipynb
@@ -5,7 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image creation"
+    "# Image creation\n",
+    "\n",
+    "Note that you may need to experiment with your prompts until you get a decent result.\n",
+    "\n",
+    "Take a look at this article for some tips for different image generation options: \n",
+    "\n",
+    "- [Prompt Design for DALL·E: Photorealism — Emulating Reality](https://medium.com/merzazine/prompt-design-for-dall-e-photorealism-emulating-reality-6f478df6f186)"
    ]
   },
   {
@@ -33,10 +39,7 @@
    "metadata": {},
    "source": [
     "## API calls\n",
-    "\n",
-    "Take a look at this article for some tips for different image generation options: \n",
-    "\n",
-    "- [Prompt Design for DALL·E: Photorealism — Emulating Reality](https://medium.com/merzazine/prompt-design-for-dall-e-photorealism-emulating-reality-6f478df6f186)"
+    "\n"
    ]
   },
   {
